# LeviLauncher-Zoom

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config_manager.rs  lib.rs  windows.rs  zoom.rs
