[package]
name = "zoom"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[target.'cfg(windows)'.dependencies]
minhook-sys = "0.1.1"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
